# Image_processing_for_BoW

./: CMakeLists.txt  README.md  main.c
Data/: Rteste.ppm  Rteste_2.ppm  adjTest.pgm  datasetInfo_ID1.txt  datasetInfo_ID20.txt  datasetInfo_ID3.txt  datasetInfo_ID5.txt  fm.txt  granTest.ppm  teste.pgm  teste1.ppm  teste3.ppm  teste3_2.ppm
Data/testFolder/: 1.ppm  10.ppm  100.ppm  1000.ppm  1001.ppm  1002.ppm  1003.ppm  1004.ppm  1005.ppm  1006.ppm  1007.ppm  1008.ppm  1009.ppm  101.ppm  1010.ppm  1011.ppm  1012.ppm  1013.ppm  1014.ppm  1015.ppm  1016.ppm  1017.ppm  1018.ppm  1019.ppm  102.ppm  1020.ppm  1021.ppm  1022.ppm  1023.ppm  1024.ppm  1025.ppm  1026.ppm  1027.ppm  1028.ppm  1029.ppm  103.ppm  1030.ppm  1031.ppm  1032.ppm  1033.ppm  (+1127 more)
Data/test_set1/: obj10__140.ppm  obj10__150.ppm  obj10__170.ppm  (+80 more)
data/: 101_ObjectCategories_test.txt  101_ObjectCategories_train.txt  Coil_100_test.txt  Coil_100_testLabels.txt  Coil_100_traning.txt  Emotions_test.txt  Emotions_traning.txt  MNIST2_test.txt  MNIST_traning.txt  _test.txt  _traning.txt  _traningLabels.txt  img.ppm  jaffe_test.txt  jaffe_traning.txt
dictonary/: clk_1.txt  clk_2.txt  dic1_vw0.ppm  dic1_vw1.ppm  dic_1.txt  dic_2.txt
header/: ImagePile.h  adjRelation.h  alg.h  bow.h  direct.h  features.h  filter.h  histogram.h  image.h  imagePile.h  label.h  math.h  morphology.h  myMath.h  stringManipulation.h
run/: createDataset.c
src/: Features.c  ImagePile.c  adjRelation.c  alg.c  bow.c  direct.c  filter.c  histogram.c  image.c  imagePile.c  label.c  math.c  morphology.c  myMath.c  stringManipulation.c
(+7302 files in other folders)
